fixing link overflow

--- a/djsite/static/base.css
+++ b/djsite/static/base.css
@@ -156,6 +156,7 @@ h1 {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    display: inline-block;
 }
 
 .blog_info {
